// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAdminProductsPaginated: existing queries are unchanged > active first 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "order",
     "is_active",
     {
      "ascending": false
     }
    ],
    [
     "order",
     "id",
     {
      "ascending": true
     }
    ],
    [
     "range",
     0,
     9
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "result": {
  "products": [
   {
    "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
    "name": "Toor Dal 1 kg",
    "category": "Staples",
    "discounted_price": 152,
    "base_price": 160,
    "is_active": true,
    "image_url": null,
    "is_loose": false,
    "unit": "kg",
    "price": 152,
    "original_price": 160,
    "in_stock": true,
    "isLoose": false
   }
  ],
  "total": 1
 }
}"
`;

exports[`getAdminProductsPaginated: existing queries are unchanged > category + price sort 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "eq",
     "category",
     "Staples"
    ],
    [
     "order",
     "discounted_price",
     {
      "ascending": false
     }
    ],
    [
     "order",
     "id",
     {
      "ascending": true
     }
    ],
    [
     "range",
     0,
     9
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "result": {
  "products": [
   {
    "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
    "name": "Toor Dal 1 kg",
    "category": "Staples",
    "discounted_price": 152,
    "base_price": 160,
    "is_active": true,
    "image_url": null,
    "is_loose": false,
    "unit": "kg",
    "price": 152,
    "original_price": 160,
    "in_stock": true,
    "isLoose": false
   }
  ],
  "total": 1
 }
}"
`;

exports[`getAdminProductsPaginated: existing queries are unchanged > first page, defaults 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "order",
     "name",
     {
      "ascending": true
     }
    ],
    [
     "order",
     "id",
     {
      "ascending": true
     }
    ],
    [
     "range",
     0,
     9
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "result": {
  "products": [
   {
    "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
    "name": "Toor Dal 1 kg",
    "category": "Staples",
    "discounted_price": 152,
    "base_price": 160,
    "is_active": true,
    "image_url": null,
    "is_loose": false,
    "unit": "kg",
    "price": 152,
    "original_price": 160,
    "in_stock": true,
    "isLoose": false
   }
  ],
  "total": 1
 }
}"
`;

exports[`getAdminProductsPaginated: existing queries are unchanged > page 3 of 25, newest first 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "order",
     "created_at",
     {
      "ascending": false
     }
    ],
    [
     "order",
     "id",
     {
      "ascending": true
     }
    ],
    [
     "range",
     50,
     74
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "result": {
  "products": [
   {
    "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
    "name": "Toor Dal 1 kg",
    "category": "Staples",
    "discounted_price": 152,
    "base_price": 160,
    "is_active": true,
    "image_url": null,
    "is_loose": false,
    "unit": "kg",
    "price": 152,
    "original_price": 160,
    "in_stock": true,
    "isLoose": false
   }
  ],
  "total": 1
 }
}"
`;

exports[`getAdminProductsPaginated: existing queries are unchanged > search by full id 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "or",
     "name.ilike.%000200d2-4f81-418e-8654-d7e59dc6b9be%,description.ilike.%000200d2-4f81-418e-8654-d7e59dc6b9be%,id.eq.000200d2-4f81-418e-8654-d7e59dc6b9be"
    ],
    [
     "order",
     "name",
     {
      "ascending": true
     }
    ],
    [
     "order",
     "id",
     {
      "ascending": true
     }
    ],
    [
     "range",
     0,
     9
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "result": {
  "products": [
   {
    "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
    "name": "Toor Dal 1 kg",
    "category": "Staples",
    "discounted_price": 152,
    "base_price": 160,
    "is_active": true,
    "image_url": null,
    "is_loose": false,
    "unit": "kg",
    "price": 152,
    "original_price": 160,
    "in_stock": true,
    "isLoose": false
   }
  ],
  "total": 1
 }
}"
`;

exports[`getAdminProductsPaginated: existing queries are unchanged > search by name 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "or",
     "name.ilike.%dal%,description.ilike.%dal%"
    ],
    [
     "order",
     "name",
     {
      "ascending": true
     }
    ],
    [
     "order",
     "id",
     {
      "ascending": true
     }
    ],
    [
     "range",
     0,
     9
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "result": {
  "products": [
   {
    "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
    "name": "Toor Dal 1 kg",
    "category": "Staples",
    "discounted_price": 152,
    "base_price": 160,
    "is_active": true,
    "image_url": null,
    "is_loose": false,
    "unit": "kg",
    "price": 152,
    "original_price": 160,
    "in_stock": true,
    "isLoose": false
   }
  ],
  "total": 1
 }
}"
`;

exports[`getAdminProductsPaginated: existing queries are unchanged > unknown sort field falls back to name 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "order",
     "name",
     {
      "ascending": true
     }
    ],
    [
     "order",
     "id",
     {
      "ascending": true
     }
    ],
    [
     "range",
     0,
     9
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "result": {
  "products": [
   {
    "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
    "name": "Toor Dal 1 kg",
    "category": "Staples",
    "discounted_price": 152,
    "base_price": 160,
    "is_active": true,
    "image_url": null,
    "is_loose": false,
    "unit": "kg",
    "price": 152,
    "original_price": 160,
    "in_stock": true,
    "isLoose": false
   }
  ],
  "total": 1
 }
}"
`;

exports[`getProductStats > same counts and queries 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "select",
   "filters": [],
   "terminal": null,
   "columns": "*"
  },
  {
   "table": "master_products",
   "op": "select",
   "filters": [
    [
     "eq",
     "is_active",
     true
    ]
   ],
   "terminal": null,
   "columns": "*"
  }
 ],
 "stats": {
  "total": 43476,
  "inStock": 43000,
  "outOfStock": 476
 }
}"
`;

exports[`updateProduct > a category-only change writes only the category column 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "update",
   "filters": [
    [
     "eq",
     "id",
     "000200d2-4f81-418e-8654-d7e59dc6b9be"
    ]
   ],
   "terminal": "single",
   "payload": {
    "category": "Dairy"
   }
  }
 ],
 "updated": {
  "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
  "name": "Toor Dal 1 kg",
  "category": "Dairy",
  "discounted_price": 152,
  "base_price": 160,
  "is_active": true,
  "image_url": null,
  "is_loose": false,
  "unit": "kg",
  "price": 152,
  "original_price": 160,
  "in_stock": true,
  "isLoose": false
 }
}"
`;

exports[`updateProduct > a price-only change writes only the two price columns 1`] = `
"{
 "calls": [
  {
   "table": "master_products",
   "op": "update",
   "filters": [
    [
     "eq",
     "id",
     "000200d2-4f81-418e-8654-d7e59dc6b9be"
    ]
   ],
   "terminal": "single",
   "payload": {
    "base_price": 170,
    "discounted_price": 155
   }
  }
 ],
 "updated": {
  "id": "000200d2-4f81-418e-8654-d7e59dc6b9be",
  "name": "Toor Dal 1 kg",
  "category": "Staples",
  "discounted_price": 155,
  "base_price": 170,
  "is_active": true,
  "image_url": null,
  "is_loose": false,
  "unit": "kg",
  "price": 155,
  "original_price": 170,
  "in_stock": true,
  "isLoose": false
 }
}"
`;
